[package]
name = "minefield-bot"
version = "0.1.0"
authors = ["Paweł Marczewski <pwmarcz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minefield-core = { path = "../minefield-core" }
websocket = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
failure = "*"
failure_derive = "*"
log = "*"
env_logger = "*"
clap = "*"
