[package]
name = "minefield-core"
version = "0.1.0"
authors = ["Paweł Marczewski <pwmarcz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"

[profile.test]
opt-level = 3
