[package]
name = "minefield-game"
version = "0.1.0"
authors = ["Paweł Marczewski <pwmarcz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minefield-core = { path = "../minefield-core" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "*"
failure = "*"
failure_derive = "*"
