[package]
name = "minefield-server"
version = "0.1.0"
authors = ["Paweł Marczewski <pwmarcz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minefield-core = { path = "../minefield-core" }
minefield-game = { path = "../minefield-game" }
# websocket = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
failure = "*"
failure_derive = "*"
log = "*"
env_logger = "*"
clap = "*"
hyper = "0.14"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
hyper-staticfile = "*"
tokio-tungstenite = "*"
sha1 = "*"
base64 = "*"
